# SMCS-stock-prediction

./: .gitignore  Mdgnn.py  README.md  build_graph.py  build_stock_stock_edges.py  graph_snapshot.py  lstm.py  main.py  model.py  pyproject.toml  sync.py  test.csv
data_processor/: preprocess.py  summarize.py
data_processor/gpt_sentiment_price_news_integrate/: aa.csv
graph_output/: graph_summary.txt  nodes_bank.parquet  nodes_stock.parquet
src/: Mdgnn.py  lstm.py  model.py
src/data_loader/: clean_data.py  load_huggingface.py  main.py  news_scraper.py  readme.md  summarize.py
src/data_preprocessing/: aggregate_scores.py  async_llm_processor.py  format_parquet.py  main.py  ollama_functions.py  readme.md
src/model/: Mdgnn.py  analyse.py  baseline.py  build_graphs.py  create_adj_matrices.py  lstm.py  model.py  readme.md
