[project]
name = "smcs-stock-prediction"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "polars>=1.38.1",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
    "trafilatura>=2.0.0",
    "aiohttp>=3.13.3",
    "sumy>=0.12.0",
    "huggingface-hub>=1.6.0",
    "httpx[http2]>=0.28.1",
    "langchain-ollama>=1.0.1",
    "langchain>=1.2.11",
    "numpy<2",
    "pandas>=3.0.1",
    "gensim>=4.4.0",
    "pyarrow>=23.0.1",
    "torch",
    "torchvision",
]


[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.optional-dependencies]
rocm = ["torch", "torchvision"]
cuda = ["torch", "torchvision"]

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm", marker = "extra == 'rocm' and extra != 'cuda'" },
    { index = "pytorch-cu124", marker = "extra == 'cuda' and extra != 'rocm'" },
]
torchvision = [
    { index = "pytorch-rocm", marker = "extra == 'rocm' and extra != 'cuda'" },
    { index = "pytorch-cu124", marker = "extra == 'cuda' and extra != 'rocm'" },
]